--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
           <div class="col-xs-10 col-sm-6 col-lg-4 mx-auto my-3 store-item" data-item="monkeys">
             <div class="card">
               <div class="card-image">
-                <img src="https://cdn.pixabay.com/photo/2019/04/29/01/00/zoo-4164889_1280.jpg" class="card-img-top store-img" alt="Urangatangs lying in straw">
+                <img src="https://cdn.pixabay.com/photo/2019/04/29/01/00/zoo-4164889_1280.jpg" class="card-img-top store-img" alt="Orangutans lying in straw">
               </div>
               <div class="card-body">
                 <div class="card-text d-flex justify-content-between text-capitalize">
-                  <h5 id="store-item-name">Urangatangs</h5>
+                  <h5 id="store-item-name">Orangutans</h5>
                 </div>
               </div>
             </div>
